# Single-page-application-Contacts

./: .env  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: asgi.py  settings.py  settings.py~  urls.py
backend/__pycache__/: settings.cpython-312.pyc.2163138720176
comments/: admin.py  consumers.py  forms.py  models.py  routing.py  serializers.py  serializers.py~  urls.py  urls.py~  utils.py  views.py
comments/migrations/: 0001_initial.py
comments/static/comments/css/: styles.css
comments/static/comments/js/: commentComponent.js  comments.js  csrf.js
comments/templates/comments/: index.html
frontend/: babel.config.js  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js  router.js  store.js
frontend/src/api/: axios.js  axiosClient.js
frontend/src/components/: Captcha.vue  CommentForm.vue  CommentList.vue  CommentsPage.vue  FileUpload.vue  HomePage.vue  Pagination.vue  PostComments.vue  UserForm.vue
frontend/src/views/: CommentPage.vue  HomePage.vue  RegistrationPage.vue
media/comment_text_files/: spa.txt
staticfiles/comments/css/: styles.css
